redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-db
  template:
    metadata:
      labels:
        app: guestbook-db
    spec:
      containers:
      - name: redis
        image: redis:7.2.4
        ports:
        - containerPort: 6379
        args:
        - /redis/redis.conf
        - --requirepass $(REDIS_PASSWORD)
        volumeMounts:
        - name: redis-config-volume
          mountPath: /redis/
        - name: redis-data-volume
          mountPath: /data
      volumes:
      - name: redis-config-volume
        configMap:
          name: redis-config
      - name: redis-data-volume
        persistentVolumeClaim:
          claimName: redis-data-claim
