redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: guestbook-db
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 6379
